# backend/gen/api/questions/schema.gen.go
@@ -1,0 +1,284 @@
+// Package questions_gen provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
+package questions_gen
+
+import (
+	"fmt"
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+	"github.com/oapi-codegen/runtime"
+	openapi_types "github.com/oapi-codegen/runtime/types"
+)
+
+const (
+	BearerAuthScopes = "bearerAuth.Scopes"
+)
+
+// Defines values for QuestionType.
+const (
+	FillIn       QuestionType = "fill_in"
+	Mcq          QuestionType = "mcq"
+	Numeric      QuestionType = "numeric"
+	OpenResponse QuestionType = "open_response"
+	TrueFalse    QuestionType = "true_false"
+)
+
+// CreateQuestionRequest defines model for CreateQuestionRequest.
+type CreateQuestionRequest struct {
+	Config       map[string]interface{} `json:"config"`
+	MaximumMarks float64                `json:"maximum_marks"`
+	Type         QuestionType           `json:"type"`
+}
+
+// Question defines model for Question.
+type Question struct {
+	// Config Type-specific shape (see internal/questionconfig on the backend for the validated Go structs this mirrors).
+	Config        map[string]interface{} `json:"config"`
+	ExamSubjectId openapi_types.UUID     `json:"exam_subject_id"`
+	Id            openapi_types.UUID     `json:"id"`
+	MaximumMarks  float64                `json:"maximum_marks"`
+	SchemaVersion int                    `json:"schema_version"`
+	Type          QuestionType           `json:"type"`
+}
+
+// QuestionList defines model for QuestionList.
+type QuestionList struct {
+	Questions []Question `json:"questions"`
+}
+
+// QuestionType defines model for QuestionType.
+type QuestionType string
+
+// UpdateQuestionRequest defines model for UpdateQuestionRequest.
+type UpdateQuestionRequest struct {
+	Config       map[string]interface{} `json:"config"`
+	MaximumMarks float64                `json:"maximum_marks"`
+	Type         QuestionType           `json:"type"`
+}
+
+// CreateQuestionJSONRequestBody defines body for CreateQuestion for application/json ContentType.
+type CreateQuestionJSONRequestBody = CreateQuestionRequest
+
+// UpdateQuestionJSONRequestBody defines body for UpdateQuestion for application/json ContentType.
+type UpdateQuestionJSONRequestBody = UpdateQuestionRequest
+
+// ServerInterface represents all server handlers.
+type ServerInterface interface {
+	// List Questions in an Exam Subject's catalogue
+	// (GET /exam-subjects/{examSubjectId}/questions)
+	ListQuestions(c *gin.Context, examSubjectId openapi_types.UUID)
+	// Author a Question in an Exam Subject's catalogue
+	// (POST /exam-subjects/{examSubjectId}/questions)
+	CreateQuestion(c *gin.Context, examSubjectId openapi_types.UUID)
+	// Remove a Question from an Exam Subject's catalogue
+	// (DELETE /exam-subjects/{examSubjectId}/questions/{questionId})
+	DeleteQuestion(c *gin.Context, examSubjectId openapi_types.UUID, questionId openapi_types.UUID)
+	// Get a Question in an Exam Subject's catalogue
+	// (GET /exam-subjects/{examSubjectId}/questions/{questionId})
+	GetQuestion(c *gin.Context, examSubjectId openapi_types.UUID, questionId openapi_types.UUID)
+	// Update a Question in an Exam Subject's catalogue
+	// (PUT /exam-subjects/{examSubjectId}/questions/{questionId})
+	UpdateQuestion(c *gin.Context, examSubjectId openapi_types.UUID, questionId openapi_types.UUID)
+}
+
+// ServerInterfaceWrapper converts contexts to parameters.
+type ServerInterfaceWrapper struct {
+	Handler            ServerInterface
+	HandlerMiddlewares []MiddlewareFunc
+	ErrorHandler       func(*gin.Context, error, int)
+}
+
+type MiddlewareFunc func(c *gin.Context)
+
+// ListQuestions operation middleware
+func (siw *ServerInterfaceWrapper) ListQuestions(c *gin.Context) {
+
+	var err error
+
+	// ------------- Path parameter "examSubjectId" -------------
+	var examSubjectId openapi_types.UUID
+
+	err = runtime.BindStyledParameterWithOptions("simple", "examSubjectId", c.Param("examSubjectId"), &examSubjectId, runtime.BindStyledParameterOptions{Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter examSubjectId: %w", err), http.StatusBadRequest)
+		return
+	}
+
+	c.Set(BearerAuthScopes, []string{})
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		middleware(c)
+		if c.IsAborted() {
+			return
+		}
+	}
+
+	siw.Handler.ListQuestions(c, examSubjectId)
+}
+
+// CreateQuestion operation middleware
+func (siw *ServerInterfaceWrapper) CreateQuestion(c *gin.Context) {
+
+	var err error
+
+	// ------------- Path parameter "examSubjectId" -------------
+	var examSubjectId openapi_types.UUID
+
+	err = runtime.BindStyledParameterWithOptions("simple", "examSubjectId", c.Param("examSubjectId"), &examSubjectId, runtime.BindStyledParameterOptions{Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter examSubjectId: %w", err), http.StatusBadRequest)
+		return
+	}
+
+	c.Set(BearerAuthScopes, []string{})
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		middleware(c)
+		if c.IsAborted() {
+			return
+		}
+	}
+
+	siw.Handler.CreateQuestion(c, examSubjectId)
+}
+
+// DeleteQuestion operation middleware
+func (siw *ServerInterfaceWrapper) DeleteQuestion(c *gin.Context) {
+
+	var err error
+
+	// ------------- Path parameter "examSubjectId" -------------
+	var examSubjectId openapi_types.UUID
+
+	err = runtime.BindStyledParameterWithOptions("simple", "examSubjectId", c.Param("examSubjectId"), &examSubjectId, runtime.BindStyledParameterOptions{Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter examSubjectId: %w", err), http.StatusBadRequest)
+		return
+	}
+
+	// ------------- Path parameter "questionId" -------------
+	var questionId openapi_types.UUID
+
+	err = runtime.BindStyledParameterWithOptions("simple", "questionId", c.Param("questionId"), &questionId, runtime.BindStyledParameterOptions{Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter questionId: %w", err), http.StatusBadRequest)
+		return
+	}
+
+	c.Set(BearerAuthScopes, []string{})
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		middleware(c)
+		if c.IsAborted() {
+			return
+		}
+	}
+
+	siw.Handler.DeleteQuestion(c, examSubjectId, questionId)
+}
+
+// GetQuestion operation middleware
+func (siw *ServerInterfaceWrapper) GetQuestion(c *gin.Context) {
+
+	var err error
+
+	// ------------- Path parameter "examSubjectId" -------------
+	var examSubjectId openapi_types.UUID
+
+	err = runtime.BindStyledParameterWithOptions("simple", "examSubjectId", c.Param("examSubjectId"), &examSubjectId, runtime.BindStyledParameterOptions{Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter examSubjectId: %w", err), http.StatusBadRequest)
+		return
+	}
+
+	// ------------- Path parameter "questionId" -------------
+	var questionId openapi_types.UUID
+
+	err = runtime.BindStyledParameterWithOptions("simple", "questionId", c.Param("questionId"), &questionId, runtime.BindStyledParameterOptions{Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter questionId: %w", err), http.StatusBadRequest)
+		return
+	}
+
+	c.Set(BearerAuthScopes, []string{})
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		middleware(c)
+		if c.IsAborted() {
+			return
+		}
+	}
+
+	siw.Handler.GetQuestion(c, examSubjectId, questionId)
+}
+
+// UpdateQuestion operation middleware
+func (siw *ServerInterfaceWrapper) UpdateQuestion(c *gin.Context) {
+
+	var err error
+
+	// ------------- Path parameter "examSubjectId" -------------
+	var examSubjectId openapi_types.UUID
+
+	err = runtime.BindStyledParameterWithOptions("simple", "examSubjectId", c.Param("examSubjectId"), &examSubjectId, runtime.BindStyledParameterOptions{Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter examSubjectId: %w", err), http.StatusBadRequest)
+		return
+	}
+
+	// ------------- Path parameter "questionId" -------------
+	var questionId openapi_types.UUID
+
+	err = runtime.BindStyledParameterWithOptions("simple", "questionId", c.Param("questionId"), &questionId, runtime.BindStyledParameterOptions{Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter questionId: %w", err), http.StatusBadRequest)
+		return
+	}
+
+	c.Set(BearerAuthScopes, []string{})
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		middleware(c)
+		if c.IsAborted() {
+			return
+		}
+	}
+
+	siw.Handler.UpdateQuestion(c, examSubjectId, questionId)
+}
+
+// GinServerOptions provides options for the Gin server.
+type GinServerOptions struct {
+	BaseURL      string
+	Middlewares  []MiddlewareFunc
+	ErrorHandler func(*gin.Context, error, int)
+}
+
+// RegisterHandlers creates http.Handler with routing matching OpenAPI spec.
+func RegisterHandlers(router gin.IRouter, si ServerInterface) {
+	RegisterHandlersWithOptions(router, si, GinServerOptions{})
+}
+
+// RegisterHandlersWithOptions creates http.Handler with additional options
+func RegisterHandlersWithOptions(router gin.IRouter, si ServerInterface, options GinServerOptions) {
+	errorHandler := options.ErrorHandler
+	if errorHandler == nil {
+		errorHandler = func(c *gin.Context, err error, statusCode int) {
+			c.JSON(statusCode, gin.H{"msg": err.Error()})
+		}
+	}
+
+	wrapper := ServerInterfaceWrapper{
+		Handler:            si,
+		HandlerMiddlewares: options.Middlewares,
+		ErrorHandler:       errorHandler,
+	}
+
+	router.GET(options.BaseURL+"/exam-subjects/:examSubjectId/questions", wrapper.ListQuestions)
+	router.POST(options.BaseURL+"/exam-subjects/:examSubjectId/questions", wrapper.CreateQuestion)
+	router.DELETE(options.BaseURL+"/exam-subjects/:examSubjectId/questions/:questionId", wrapper.DeleteQuestion)
+	router.GET(options.BaseURL+"/exam-subjects/:examSubjectId/questions/:questionId", wrapper.GetQuestion)
+	router.PUT(options.BaseURL+"/exam-subjects/:examSubjectId/questions/:questionId", wrapper.UpdateQuestion)
+}
